point at gh-pages data site

--- a/eng-415-145a/iiif/manifest.json
+++ b/eng-415-145a/iiif/manifest.json
@@ -3,20 +3,20 @@
 		"http://www.w3.org/ns/anno.jsonld",
 		"http://iiif.io/api/presentation/3/context.json"
 	],
-	"id": "http://localhost:8080/eng-415-145a/iiif/manifest.json",
+	"id": "https://cu-mkp.github.io/bic-editioncrafter-data/eng-415-145a/iiif/manifest.json",
 	"type": "Manifest",
 	"items": [
 		{
-			"id": "http://localhost:8080/eng-415-145a/iiif/canvas/f000",
+			"id": "https://cu-mkp.github.io/bic-editioncrafter-data/eng-415-145a/iiif/canvas/f000",
 			"type": "Canvas",
 			"items": [
 				{
-					"id": "http://localhost:8080/eng-415-145a/iiif/canvas/f000/annotationpage/0",
+					"id": "https://cu-mkp.github.io/bic-editioncrafter-data/eng-415-145a/iiif/canvas/f000/annotationpage/0",
 					"type": "AnnotationPage",
 					"items": [
 						{
 							"@context": "https://www.w3.org/ns/anno.jsonld",
-							"id": "http://localhost:8080/eng-415-145a/iiif/canvas/f000/annotationpage/0/annotation/0",
+							"id": "https://cu-mkp.github.io/bic-editioncrafter-data/eng-415-145a/iiif/canvas/f000/annotationpage/0/annotation/0",
 							"type": "Annotation",
 							"motivation": "painting",
 							"body": {
@@ -41,7 +41,7 @@
 									}
 								]
 							},
-							"target": "http://localhost:8080/eng-415-145a/iiif/canvas/f000"
+							"target": "https://cu-mkp.github.io/bic-editioncrafter-data/eng-415-145a/iiif/canvas/f000"
 						}
 					]
 				}
@@ -55,50 +55,50 @@
 			},
 			"annotations": [
 				{
-					"id": "http://localhost:8080/eng-415-145a/iiif/canvas/f000/annotationPage/1",
+					"id": "https://cu-mkp.github.io/bic-editioncrafter-data/eng-415-145a/iiif/canvas/f000/annotationPage/1",
 					"type": "AnnotationPage",
 					"items": [
 						{
 							"@context": "https://www.w3.org/ns/anno.jsonld",
-							"id": "http://localhost:8080/eng-415-145a/iiif/canvas/f000/annotationPage/1/annotation/0",
+							"id": "https://cu-mkp.github.io/bic-editioncrafter-data/eng-415-145a/iiif/canvas/f000/annotationPage/1/annotation/0",
 							"type": "Annotation",
 							"motivation": "supplementing",
 							"body": {
-								"id": "http://localhost:8080/eng-415-145a/tei/eng-415-145a/f000.xml",
+								"id": "https://cu-mkp.github.io/bic-editioncrafter-data/eng-415-145a/tei/eng-415-145a/f000.xml",
 								"format": "text/xml",
 								"type": "TextPartial",
 								"profile": "https://github.com/cu-mkp/editioncrafter-project/text-partial-resource.md"
 							},
-							"target": "http://localhost:8080/eng-415-145a/iiif/canvas/f000"
+							"target": "https://cu-mkp.github.io/bic-editioncrafter-data/eng-415-145a/iiif/canvas/f000"
 						},
 						{
 							"@context": "https://www.w3.org/ns/anno.jsonld",
-							"id": "http://localhost:8080/eng-415-145a/iiif/canvas/f000/annotationPage/1/annotation/1",
+							"id": "https://cu-mkp.github.io/bic-editioncrafter-data/eng-415-145a/iiif/canvas/f000/annotationPage/1/annotation/1",
 							"type": "Annotation",
 							"motivation": "supplementing",
 							"body": {
-								"id": "http://localhost:8080/eng-415-145a/html/eng-415-145a/f000.html",
+								"id": "https://cu-mkp.github.io/bic-editioncrafter-data/eng-415-145a/html/eng-415-145a/f000.html",
 								"format": "text/html",
 								"type": "TextPartial",
 								"profile": "https://github.com/cu-mkp/editioncrafter-project/text-partial-resource.md"
 							},
-							"target": "http://localhost:8080/eng-415-145a/iiif/canvas/f000"
+							"target": "https://cu-mkp.github.io/bic-editioncrafter-data/eng-415-145a/iiif/canvas/f000"
 						}
 					]
 				}
 			]
 		},
 		{
-			"id": "http://localhost:8080/eng-415-145a/iiif/canvas/f001",
+			"id": "https://cu-mkp.github.io/bic-editioncrafter-data/eng-415-145a/iiif/canvas/f001",
 			"type": "Canvas",
 			"items": [
 				{
-					"id": "http://localhost:8080/eng-415-145a/iiif/canvas/f001/annotationpage/0",
+					"id": "https://cu-mkp.github.io/bic-editioncrafter-data/eng-415-145a/iiif/canvas/f001/annotationpage/0",
 					"type": "AnnotationPage",
 					"items": [
 						{
 							"@context": "https://www.w3.org/ns/anno.jsonld",
-							"id": "http://localhost:8080/eng-415-145a/iiif/canvas/f001/annotationpage/0/annotation/0",
+							"id": "https://cu-mkp.github.io/bic-editioncrafter-data/eng-415-145a/iiif/canvas/f001/annotationpage/0/annotation/0",
 							"type": "Annotation",
 							"motivation": "painting",
 							"body": {
@@ -123,7 +123,7 @@
 									}
 								]
 							},
-							"target": "http://localhost:8080/eng-415-145a/iiif/canvas/f001"
+							"target": "https://cu-mkp.github.io/bic-editioncrafter-data/eng-415-145a/iiif/canvas/f001"
 						}
 					]
 				}
@@ -137,50 +137,50 @@
 			},
 			"annotations": [
 				{
-					"id": "http://localhost:8080/eng-415-145a/iiif/canvas/f001/annotationPage/1",
+					"id": "https://cu-mkp.github.io/bic-editioncrafter-data/eng-415-145a/iiif/canvas/f001/annotationPage/1",
 					"type": "AnnotationPage",
 					"items": [
 						{
 							"@context": "https://www.w3.org/ns/anno.jsonld",
-							"id": "http://localhost:8080/eng-415-145a/iiif/canvas/f001/annotationPage/1/annotation/0",
+							"id": "https://cu-mkp.github.io/bic-editioncrafter-data/eng-415-145a/iiif/canvas/f001/annotationPage/1/annotation/0",
 							"type": "Annotation",
 							"motivation": "supplementing",
 							"body": {
-								"id": "http://localhost:8080/eng-415-145a/tei/eng-415-145a/f001.xml",
+								"id": "https://cu-mkp.github.io/bic-editioncrafter-data/eng-415-145a/tei/eng-415-145a/f001.xml",
 								"format": "text/xml",
 								"type": "TextPartial",
 								"profile": "https://github.com/cu-mkp/editioncrafter-project/text-partial-resource.md"
 							},
-							"target": "http://localhost:8080/eng-415-145a/iiif/canvas/f001"
+							"target": "https://cu-mkp.github.io/bic-editioncrafter-data/eng-415-145a/iiif/canvas/f001"
 						},
 						{
 							"@context": "https://www.w3.org/ns/anno.jsonld",
-							"id": "http://localhost:8080/eng-415-145a/iiif/canvas/f001/annotationPage/1/annotation/1",
+							"id": "https://cu-mkp.github.io/bic-editioncrafter-data/eng-415-145a/iiif/canvas/f001/annotationPage/1/annotation/1",
 							"type": "Annotation",
 							"motivation": "supplementing",
 							"body": {
-								"id": "http://localhost:8080/eng-415-145a/html/eng-415-145a/f001.html",
+								"id": "https://cu-mkp.github.io/bic-editioncrafter-data/eng-415-145a/html/eng-415-145a/f001.html",
 								"format": "text/html",
 								"type": "TextPartial",
 								"profile": "https://github.com/cu-mkp/editioncrafter-project/text-partial-resource.md"
 							},
-							"target": "http://localhost:8080/eng-415-145a/iiif/canvas/f001"
+							"target": "https://cu-mkp.github.io/bic-editioncrafter-data/eng-415-145a/iiif/canvas/f001"
 						}
 					]
 				}
 			]
 		},
 		{
-			"id": "http://localhost:8080/eng-415-145a/iiif/canvas/f002",
+			"id": "https://cu-mkp.github.io/bic-editioncrafter-data/eng-415-145a/iiif/canvas/f002",
 			"type": "Canvas",
 			"items": [
 				{
-					"id": "http://localhost:8080/eng-415-145a/iiif/canvas/f002/annotationpage/0",
+					"id": "https://cu-mkp.github.io/bic-editioncrafter-data/eng-415-145a/iiif/canvas/f002/annotationpage/0",
 					"type": "AnnotationPage",
 					"items": [
 						{
 							"@context": "https://www.w3.org/ns/anno.jsonld",
-							"id": "http://localhost:8080/eng-415-145a/iiif/canvas/f002/annotationpage/0/annotation/0",
+							"id": "https://cu-mkp.github.io/bic-editioncrafter-data/eng-415-145a/iiif/canvas/f002/annotationpage/0/annotation/0",
 							"type": "Annotation",
 							"motivation": "painting",
 							"body": {
@@ -205,7 +205,7 @@
 									}
 								]
 							},
-							"target": "http://localhost:8080/eng-415-145a/iiif/canvas/f002"
+							"target": "https://cu-mkp.github.io/bic-editioncrafter-data/eng-415-145a/iiif/canvas/f002"
 						}
 					]
 				}
@@ -219,34 +219,34 @@
 			},
 			"annotations": [
 				{
-					"id": "http://localhost:8080/eng-415-145a/iiif/canvas/f002/annotationPage/1",
+					"id": "https://cu-mkp.github.io/bic-editioncrafter-data/eng-415-145a/iiif/canvas/f002/annotationPage/1",
 					"type": "AnnotationPage",
 					"items": [
 						{
 							"@context": "https://www.w3.org/ns/anno.jsonld",
-							"id": "http://localhost:8080/eng-415-145a/iiif/canvas/f002/annotationPage/1/annotation/0",
+							"id": "https://cu-mkp.github.io/bic-editioncrafter-data/eng-415-145a/iiif/canvas/f002/annotationPage/1/annotation/0",
 							"type": "Annotation",
 							"motivation": "supplementing",
 							"body": {
-								"id": "http://localhost:8080/eng-415-145a/tei/eng-415-145a/f002.xml",
+								"id": "https://cu-mkp.github.io/bic-editioncrafter-data/eng-415-145a/tei/eng-415-145a/f002.xml",
 								"format": "text/xml",
 								"type": "TextPartial",
 								"profile": "https://github.com/cu-mkp/editioncrafter-project/text-partial-resource.md"
 							},
-							"target": "http://localhost:8080/eng-415-145a/iiif/canvas/f002"
+							"target": "https://cu-mkp.github.io/bic-editioncrafter-data/eng-415-145a/iiif/canvas/f002"
 						},
 						{
 							"@context": "https://www.w3.org/ns/anno.jsonld",
-							"id": "http://localhost:8080/eng-415-145a/iiif/canvas/f002/annotationPage/1/annotation/1",
+							"id": "https://cu-mkp.github.io/bic-editioncrafter-data/eng-415-145a/iiif/canvas/f002/annotationPage/1/annotation/1",
 							"type": "Annotation",
 							"motivation": "supplementing",
 							"body": {
-								"id": "http://localhost:8080/eng-415-145a/html/eng-415-145a/f002.html",
+								"id": "https://cu-mkp.github.io/bic-editioncrafter-data/eng-415-145a/html/eng-415-145a/f002.html",
 								"format": "text/html",
 								"type": "TextPartial",
 								"profile": "https://github.com/cu-mkp/editioncrafter-project/text-partial-resource.md"
 							},
-							"target": "http://localhost:8080/eng-415-145a/iiif/canvas/f002"
+							"target": "https://cu-mkp.github.io/bic-editioncrafter-data/eng-415-145a/iiif/canvas/f002"
 						}
 					]
 				}
